crates/assembly/src/snapshots/miden_assembly__tests__advmap_push_nokey.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        push(5323528994882627547)
        push(7289169267038393752)
        push(7782723391083855904)
        push(2091619473819975598)
        noop
        noop
        push(17843484659000820118)
        emit
        drop
        assert(0)
    end
end
