crates/assembly/src/snapshots/miden_assembly__tests__assert_eq_with_code.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 1905
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(assert_eq, 2)
        eq
        asmOp(assert_eq, 2)
        assert(0)
        asmOp(assert_eq.err="Oh no", 2)
        eq
        asmOp(assert_eq.err="Oh no", 2)
        assert(15491226248792286710)
        asmOp(assert_eq.err="Oh no", 2)
        eq
        asmOp(assert_eq.err="Oh no", 2)
        assert(15491226248792286710)
    end
end
