crates/assembly/src/snapshots/miden_assembly__tests__assert_eqw_with_code.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 1929
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(assert_eqw, 11)
        movup4
        asmOp(assert_eqw, 11)
        eq
        asmOp(assert_eqw, 11)
        assert(0)
        asmOp(assert_eqw, 11)
        movup3
        asmOp(assert_eqw, 11)
        eq
        asmOp(assert_eqw, 11)
        assert(0)
        asmOp(assert_eqw, 11)
        movup2
        asmOp(assert_eqw, 11)
        eq
        asmOp(assert_eqw, 11)
        assert(0)
        asmOp(assert_eqw, 11)
        eq
        asmOp(assert_eqw, 11)
        assert(0)
        asmOp(assert_eqw.err="Oh no", 11)
        movup4
        asmOp(assert_eqw.err="Oh no", 11)
        eq
        asmOp(assert_eqw.err="Oh no", 11)
        assert(15491226248792286710)
        asmOp(assert_eqw.err="Oh no", 11)
        movup3
        asmOp(assert_eqw.err="Oh no", 11)
        eq
        asmOp(assert_eqw.err="Oh no", 11)
        assert(15491226248792286710)
        asmOp(assert_eqw.err="Oh no", 11)
        movup2
        asmOp(assert_eqw.err="Oh no", 11)
        eq
        asmOp(assert_eqw.err="Oh no", 11)
        assert(15491226248792286710)
        asmOp(assert_eqw.err="Oh no", 11)
        eq
        asmOp(assert_eqw.err="Oh no", 11)
        assert(15491226248792286710)
        asmOp(assert_eqw.err="Oh no", 11)
        movup4
        asmOp(assert_eqw.err="Oh no", 11)
        eq
        asmOp(assert_eqw.err="Oh no", 11)
        assert(15491226248792286710)
        asmOp(assert_eqw.err="Oh no", 11)
        movup3
        asmOp(assert_eqw.err="Oh no", 11)
        eq
        asmOp(assert_eqw.err="Oh no", 11)
        assert(15491226248792286710)
        asmOp(assert_eqw.err="Oh no", 11)
        movup2
        asmOp(assert_eqw.err="Oh no", 11)
        eq
        asmOp(assert_eqw.err="Oh no", 11)
        assert(15491226248792286710)
        asmOp(assert_eqw.err="Oh no", 11)
        eq
        asmOp(assert_eqw.err="Oh no", 11)
        assert(15491226248792286710)
        noop
    end
end
