crates/assembly/src/snapshots/miden_assembly__tests__assertz_with_code.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 1881
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(assertz, 2)
        eqz
        asmOp(assertz, 2)
        assert(0)
        asmOp(assertz.err="Oh no", 2)
        eqz
        asmOp(assertz.err="Oh no", 2)
        assert(15491226248792286710)
        asmOp(assertz.err="Oh no", 2)
        eqz
        asmOp(assertz.err="Oh no", 2)
        assert(15491226248792286710)
    end
end
