crates/assembly/src/snapshots/miden_assembly__tests__basic_block_and_simple_if_false-2.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    join
        basic_block
            push(2147483648)
            push(4294967294)
            mstore
            drop
            push(2)
            push(3)
            noop
            noop
            noop
            noop
        end
        if.true
            basic_block noop end
        else
            basic_block add end
        end
    end
end
