crates/assembly/src/snapshots/miden_assembly__tests__basic_block_and_simple_if_true-2.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 178
expression: program
---
begin
    join
        basic_block
            push(2147483648)
            push(4294967294)
            mstore
            drop
            asmOp(push.2, 1)
            push(2)
            asmOp(push.3, 1)
            push(3)
            noop
            noop
            noop
            noop
        end
        asmOp(if.true, 0)
        if.true
            basic_block asmOp(add, 1) add end
        else
            basic_block asmOp(nop, 1) noop end
        end
    end
end
