crates/assembly/src/snapshots/miden_assembly__tests__can_push_constant_word.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 2981
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(push.[2,3,4,5], 4)
        push(5)
        asmOp(push.[2,3,4,5], 4)
        push(4)
        asmOp(push.[2,3,4,5], 4)
        push(3)
        asmOp(push.[2,3,4,5], 4)
        push(2)
        noop
        noop
    end
end
